--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "amcore",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "description": "Modular personal productivity platform",
   "author": "Alexander Morozov <mail@alex-morozov.com>",
   "license": "MIT",
