--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@amcore/typescript-config": "workspace:*",
     "@nestjs/cli": "^10.4.0",
     "@nestjs/testing": "^10.4.0",
     "@swc/cli": "^0.5.0",
