--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,14 +6,23 @@
   "license": "MIT",
   "scripts": {
     "dev": "nest start --watch",
-    "build": "nest build",
+    "build": "prisma generate && nest build",
     "start": "node dist/main.js",
     "start:prod": "NODE_ENV=production node dist/main.js",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage"
+    "test:cov": "jest --coverage",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:prod": "prisma migrate deploy",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed"
+  },
+  "prisma": {
+    "schema": "./prisma"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.0",
@@ -22,7 +31,11 @@
     "@nestjs/platform-express": "^10.4.0",
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/throttler": "^6.3.0",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
+    "dotenv": "^17.2.3",
     "helmet": "^8.0.0",
+    "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -35,7 +48,9 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^22.0.0",
+    "@types/pg": "^8.16.0",
     "jest": "^29.7.0",
+    "prisma": "^7.3.0",
     "source-map-support": "^0.5.21",
     "ts-jest": "^29.2.0",
     "typescript": "^5.7.0"
