--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,7 +35,10 @@
     "@prisma/client": "^7.3.0",
     "dotenv": "^17.2.3",
     "helmet": "^8.0.0",
+    "nestjs-pino": "^4.5.0",
     "pg": "^8.17.2",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
