--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,8 @@
     "schema": "./prisma"
   },
   "dependencies": {
+    "@keyv/redis": "^5.1.6",
+    "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^10.4.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.0",
@@ -33,6 +35,7 @@
     "@nestjs/throttler": "^6.3.0",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "cache-manager": "^7.2.8",
     "dotenv": "^17.2.3",
     "helmet": "^8.0.0",
     "nestjs-pino": "^4.5.0",
