--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,8 +5,9 @@
   "description": "AMCore API Server",
   "license": "MIT",
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "nest start --watch",
-    "build": "prisma generate && nest build",
+    "build": "nest build",
     "start": "node dist/main.js",
     "start:prod": "NODE_ENV=production node dist/main.js",
     "lint": "eslint .",
