--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,12 +20,16 @@
     "@amcore/typescript-config": "workspace:*",
     "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.18.0",
+    "@next/eslint-plugin-next": "^15.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "^16.1.6",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.37.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.54.0"
