--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,11 +25,13 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9",
     "eslint-config-next": "^16.1.6",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.54.0"
