feat(auth): add authentication module with jwt and session management
- add auth module with register, login, logout, refresh endpoints
- implement jwt access tokens (15min) + refresh tokens (7 days)
- add prisma schema for users, sessions, oauth accounts
- configure nestjs-zod for validation with swagger integration
- add tsup for dual esm/cjs build of shared package
- create shared auth schemas (register, login, profile)

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,30 +5,22 @@
   "description": "Shared schemas, types, and constants for AMCore",
   "license": "MIT",
   "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
-    },
-    "./schemas": {
-      "types": "./dist/schemas/index.d.ts",
-      "import": "./dist/schemas/index.js"
-    },
-    "./types": {
-      "types": "./dist/types/index.d.ts",
-      "import": "./dist/types/index.js"
-    },
-    "./constants": {
-      "types": "./dist/constants/index.d.ts",
-      "import": "./dist/constants/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -36,6 +28,7 @@
   },
   "devDependencies": {
     "@amcore/typescript-config": "workspace:*",
+    "tsup": "^8.5.1",
     "typescript": "^5"
   }
 }
