--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,25 +26,34 @@
     "schema": "./prisma"
   },
   "dependencies": {
+    "@amcore/shared": "workspace:^",
     "@keyv/redis": "^5.1.6",
     "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^10.4.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.0",
+    "@nestjs/jwt": "^11.0.2",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.4.0",
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/throttler": "^6.3.0",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "argon2": "^0.44.0",
     "cache-manager": "^7.2.8",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "helmet": "^8.0.0",
     "nestjs-pino": "^4.5.0",
+    "nestjs-zod": "^5.1.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.17.2",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.24.0"
   },
   "devDependencies": {
     "@amcore/typescript-config": "workspace:*",
@@ -52,9 +61,11 @@
     "@nestjs/testing": "^10.4.0",
     "@swc/cli": "^0.5.0",
     "@swc/core": "^1.10.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^22.0.0",
+    "@types/passport-jwt": "^4.0.1",
     "@types/pg": "^8.16.0",
     "jest": "^29.7.0",
     "prisma": "^7.3.0",
