feat(auth): add frontend authentication flow
- add login/register forms with react-hook-form
- add auth store with zustand
- add api client with token refresh interceptor
- add protected routes (dashboard) and auth routes
- add shadcn ui components (input, card, form, alert, spinner)
- add session revocation endpoints
- fix eslint config for nestjs di imports
- add i18n translations for auth

--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalEnv": ["NEXT_PUBLIC_*"],
   "tasks": {
     "dev": {
       "cache": false,
