--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,6 @@ GOOGLE_CALLBACK_URL="http://localhost:3000/api/v1/auth/google/callback"
 # ===========================================
 NODE_ENV="development"
 API_PORT=5002
-WEB_PORT=3002
+CORS_ORIGIN="http://localhost:3002"
 
-# API URL for frontend
-NEXT_PUBLIC_API_URL="http://localhost:5002"
+# Frontend env: see apps/web/.env.example
