--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -56,6 +56,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@amcore/eslint-config": "workspace:*",
     "@amcore/typescript-config": "workspace:*",
     "@nestjs/cli": "^11.0.16",
     "@nestjs/testing": "^11.1.12",
