docs: align local docker db name in .env.example

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/amcore_dev?schema=public"
 
 # Example for local Docker:
-# DATABASE_URL="postgresql://amcore:amcore@localhost:5432/amcore_dev?schema=public"
+# DATABASE_URL="postgresql://amcore:amcore@localhost:5432/amcore?schema=public"
 
 # ===========================================
 # Redis
