--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,8 @@ updates:
       interval: 'weekly'
     open-pull-requests-limit: 10
     ignore:
-      - update-types: ['version-update:semver-major']
+      - dependency-name: '*'
+        update-types: ['version-update:semver-major']
     commit-message:
       prefix: 'chore(deps)'
       include: 'scope'
