fix(ci): configure eslint for jest and enforce lint checks
- Add eslint-plugin-jest for proper test file linting
- Replace 'any' with 'unknown' in exception classes
- Remove 'public' modifiers (explicit-member-accessibility rule)
- Add eslint validation step to lint-staged (--max-warnings=0)
- Fix export sorting in exceptions index

Resolves lint errors in CI that were missed by pre-commit hooks.
Previously, 'eslint --fix' in lint-staged would exit with code 0
even when unfixable errors remained, allowing faulty commits.

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
-      "eslint --fix",
+      "eslint --fix --no-warn-ignored",
+      "eslint --max-warnings=0 --no-warn-ignored",
       "prettier --write"
     ],
     "*.{json,md,yml,yaml}": [
