--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -26,5 +26,8 @@
   "peerDependencies": {
     "eslint": "^9.0.0",
     "typescript": "^5.0.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-jest": "^29.12.2"
   }
 }
