--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -44,6 +44,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "helmet": "^8.1.0",
+    "nestjs-cls": "^6.2.0",
     "nestjs-pino": "^4.5.0",
     "nestjs-zod": "^5.1.1",
     "passport": "^0.7.0",
@@ -53,6 +54,7 @@
     "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
+    "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -68,6 +70,7 @@
     "@types/node": "^25.2.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/pg": "^8.16.0",
+    "@types/uuid": "^11.0.0",
     "jest": "^30.2.0",
     "prisma": "^7.3.0",
     "source-map-support": "^0.5.21",
