--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@amcore/shared": "workspace:^",
     "@keyv/redis": "^5.1.6",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^11.1.12",
     "@nestjs/config": "^4.0.3",
@@ -36,10 +37,12 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.13",
     "@nestjs/swagger": "^11.2.5",
+    "@nestjs/terminus": "11.0.0",
     "@nestjs/throttler": "^6.5.0",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "argon2": "^0.44.0",
+    "axios": "^1.13.4",
     "cache-manager": "^7.2.8",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
