test(auth): add token and session service tests
Add comprehensive unit tests with jest-mock-extended:

- TokenService (20 tests)
  - Token generation, verification, expiration
  - Refresh token generation and hashing
  - Integration lifecycle

- SessionService (28 tests)
  - Session CRUD operations
  - Token rotation and cleanup
  - Multi-device session management

- Add test-context.ts with Prisma mock helpers
- Install jest-mock-extended@4.0.0
- Update .env.example with JWT_REFRESH_DAYS

All 48 tests passing with full type safety.

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ REDIS_URL="redis://localhost:6379"
 JWT_SECRET="your-super-secret-jwt-key-min-32-characters"
 JWT_ACCESS_EXPIRATION="15m"
 JWT_REFRESH_EXPIRATION="7d"
+JWT_REFRESH_DAYS=7
 
 # ===========================================
 # Google OAuth
