--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -75,6 +75,7 @@
     "@types/pg": "^8.16.0",
     "@types/uuid": "^11.0.0",
     "jest": "^30.2.0",
+    "jest-mock-extended": "^4.0.0",
     "prisma": "^7.3.0",
     "source-map-support": "^0.5.21",
     "ts-jest": "^29.4.6",
