--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,6 +15,7 @@
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
+    "test:e2e": "NODE_OPTIONS='--experimental-vm-modules' jest --config jest-e2e.config.js --runInBand",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:migrate:prod": "prisma migrate deploy",
@@ -67,17 +68,22 @@
     "@nestjs/testing": "^11.1.12",
     "@swc/cli": "^0.7.10",
     "@swc/core": "^1.15.11",
+    "@testcontainers/postgresql": "^11.11.0",
+    "@testcontainers/redis": "^11.11.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.2.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/pg": "^8.16.0",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^11.0.0",
     "jest": "^30.2.0",
     "jest-mock-extended": "^4.0.0",
     "prisma": "^7.3.0",
     "source-map-support": "^0.5.21",
+    "supertest": "^7.2.2",
+    "testcontainers": "^11.11.0",
     "ts-jest": "^29.4.6",
     "typescript": "^5.9.3"
   }
