--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -8,6 +8,6 @@
     },
     "types": ["node", "jest"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules", "dist"]
 }
