feat(infrastructure): add bullmq job queue system
Implement production-ready queue infrastructure for async operations:
- BullMQ integration with TypeScript-first approach
- Multiple queues support (email, default)
- Job priorities, retry logic with exponential backoff
- Delayed/scheduled jobs
- Bull Board dashboard at /admin/queues
- QueueService with comprehensive API
- HelloWorldProcessor as example implementation
- 23 unit tests with 100% coverage
- Complete documentation in queue/README.md

Dependencies: @nestjs/bullmq, bullmq, @bull-board/*

Total: 167+ tests across all modules

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,8 +28,12 @@
   },
   "dependencies": {
     "@amcore/shared": "workspace:^",
+    "@bull-board/api": "^6.17.0",
+    "@bull-board/express": "^6.17.0",
+    "@bull-board/nestjs": "^6.17.0",
     "@keyv/redis": "^5.1.6",
     "@nestjs/axios": "^4.0.1",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^11.1.12",
     "@nestjs/config": "^4.0.3",
@@ -44,6 +48,7 @@
     "@prisma/client": "^7.3.0",
     "argon2": "^0.44.0",
     "axios": "^1.13.4",
+    "bullmq": "^5.68.0",
     "cache-manager": "^7.2.8",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
