feat(api): add email service with resend and react email
- Production-ready email delivery with Resend provider
- React Email templates with multilingual support (RU/EN, FormatJS)
- Async delivery via BullMQ with retry logic
- 32 tests: Jest for service logic, Vitest for template rendering

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -6,7 +6,9 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "jsx": "react-jsx",
+    "skipLibCheck": true
   },
   "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules", "dist"]
