--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,6 +15,10 @@
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
+    "test:email": "vitest run",
+    "test:email:watch": "vitest watch",
+    "test:email:ui": "vitest --ui",
+    "test:email:cov": "vitest run --coverage",
     "test:e2e": "NODE_OPTIONS='--experimental-vm-modules' jest --config jest-e2e.config.js --runInBand",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
@@ -31,6 +35,7 @@
     "@bull-board/api": "^6.17.0",
     "@bull-board/express": "^6.17.0",
     "@bull-board/nestjs": "^6.17.0",
+    "@formatjs/intl": "^4.1.2",
     "@keyv/redis": "^5.1.6",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/bullmq": "^11.0.4",
@@ -46,6 +51,8 @@
     "@nestjs/throttler": "^6.5.0",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@react-email/components": "^1.0.7",
+    "@react-email/render": "^2.0.4",
     "argon2": "^0.44.0",
     "axios": "^1.13.4",
     "bullmq": "^5.68.0",
@@ -62,6 +69,7 @@
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.9.2",
     "rxjs": "^7.8.2",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
@@ -81,15 +89,20 @@
     "@types/node": "^25.2.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/pg": "^8.16.0",
+    "@types/react": "^19.2.10",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^11.0.0",
+    "@vitest/ui": "^4.0.18",
+    "happy-dom": "^20.6.1",
     "jest": "^30.2.0",
     "jest-mock-extended": "^4.0.0",
     "prisma": "^7.4.0",
+    "react": "^19.2.4",
     "source-map-support": "^0.5.21",
     "supertest": "^7.2.2",
     "testcontainers": "^11.11.0",
     "ts-jest": "^29.4.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   }
 }
