--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": ">=20.0.0",
     "pnpm": ">=9.0.0"
   },
-  "packageManager": "pnpm@10.28.2",
+  "packageManager": "pnpm@10.29.3",
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build",
@@ -28,6 +28,7 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@amcore/eslint-config": "workspace:*",
     "@commitlint/cli": "^20.4.1",
     "@commitlint/config-conventional": "^20.4.1",
     "@eslint/js": "^9.39.2",
