--- a/.env.example
+++ b/.env.example
@@ -42,4 +42,12 @@ NODE_ENV="development"
 API_PORT=5002
 CORS_ORIGIN="http://localhost:3002"
 
+# ===========================================
+# Email Service
+# ===========================================
+EMAIL_PROVIDER="mock"  # mock | resend
+RESEND_API_KEY=""      # Get from: https://resend.com/api-keys
+EMAIL_FROM="noreply@amcore.com"
+SUPPORT_EMAIL="support@amcore.com"
+
 # Frontend env: see apps/web/.env.example
