feat(auth): add token manager service for password reset and email verification
- Add TokenManagerService with secure 64-char crypto token generation
- Implement SHA-256 hashing (consistent with existing token.service.ts)
- Add generatePasswordResetToken / verifyPasswordResetToken (15 min expiry)
- Add generateEmailVerificationToken / verifyEmailVerificationToken (48h expiry)
- Add consumeToken methods to mark tokens as used (single-use)
- Add invalidateUserTokens to invalidate active tokens on regeneration
- Register TokenManagerService in AuthModule
- Add PASSWORD_RESET_EXPIRY_MINUTES and EMAIL_VERIFICATION_EXPIRY_HOURS env vars
- Add FRONTEND_URL env var for email links
- 16 unit tests (226 total)

--- a/.env.example
+++ b/.env.example
@@ -49,5 +49,8 @@ EMAIL_PROVIDER="mock"  # mock | resend
 RESEND_API_KEY=""      # Get from: https://resend.com/api-keys
 EMAIL_FROM="noreply@amcore.com"
 SUPPORT_EMAIL="support@amcore.com"
+FRONTEND_URL="http://localhost:3002"
+PASSWORD_RESET_EXPIRY_MINUTES=15
+EMAIL_VERIFICATION_EXPIRY_HOURS=48
 
 # Frontend env: see apps/web/.env.example
