feat(auth): add casl ability factory, guards and decorators
- Install @casl/ability and @casl/prisma packages
- Add AbilityFactory to build CASL abilities from DB permissions
- Add interpolateConditions helper for ${user.sub} variable replacement
- Add guards: AuthenticationGuard (main), PoliciesGuard, SystemRolesGuard
- Add decorators: @Auth(), @CheckPolicies(), @SystemRoles(), @CurrentAbility()
- Extend Express.Request type with user and ability properties
- AuthenticationGuard creates ability once and attaches to request.ability
- 19 unit tests for AbilityFactory and guards (259 total tests passing)

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,6 +35,8 @@
     "@bull-board/api": "^6.17.0",
     "@bull-board/express": "^6.17.0",
     "@bull-board/nestjs": "^6.17.0",
+    "@casl/ability": "^6.8.0",
+    "@casl/prisma": "^1.6.1",
     "@formatjs/intl": "^4.1.2",
     "@keyv/redis": "^5.1.6",
     "@nestjs/axios": "^4.0.1",
