--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,7 +28,8 @@
     "db:seed": "prisma db seed"
   },
   "prisma": {
-    "schema": "./prisma"
+    "schema": "./prisma",
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@amcore/shared": "workspace:^",
@@ -104,6 +105,7 @@
     "supertest": "^7.2.2",
     "testcontainers": "^11.11.0",
     "ts-jest": "^29.4.6",
+    "tsx": "^4.19.4",
     "typescript": "^5.9.3",
     "vitest": "^4.0.18"
   }
