--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -67,6 +67,7 @@
     "nestjs-cls": "^6.2.0",
     "nestjs-pino": "^4.6.0",
     "nestjs-zod": "^5.1.1",
+    "openid-client": "^6.8.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.18.0",
